Change auth method
