# backend/controller/order.go
@@ -15,7 +15,7 @@ const (
 )
 
 type OrderService interface {
-	ProcessOrder(ctx context.Context, req domain.ProcessOrderRequest) (string, error)
+	ProcessOrder(ctx context.Context, userId string, req domain.ProcessOrderRequest) (string, error)
 	GetUserOrders(ctx context.Context, userId string, req domain.GetMyOrdersRequest) ([]domain.UserOrder, error)
 }
 
@@ -35,14 +35,15 @@ func NewOrder(service OrderService) Order {
 //	@Summary	Заказать
 //	@Accept		json
 //	@Produce	json
+//	@Security	Bearer
 //	@Param		body	body		domain.ProcessOrderRequest	true	"request body"
 //	@Success	200		{object}	domain.ProcessOrderResponse
 //	@Failure	400		{object}	apierrors.Error
 //	@Failure	404		{object}	apierrors.Error
 //	@Failure	500		{object}	apierrors.Error
 //	@Router		/orders [POST]
-func (c Order) ProcessOrder(ctx context.Context, req domain.ProcessOrderRequest) (*domain.ProcessOrderResponse, error) {
-	url, err := c.service.ProcessOrder(ctx, req)
+func (c Order) ProcessOrder(ctx context.Context, r *http.Request, req domain.ProcessOrderRequest) (*domain.ProcessOrderResponse, error) {
+	url, err := c.service.ProcessOrder(ctx, r.Header.Get(userIdHeader), req)
 	switch {
 	case errors.Is(err, domain.ErrDishNotFound):
 		return nil, apierrors.New(http.StatusNotFound, domain.ErrCodeDishNotFound, domain.ErrDishNotFound.Error(), err)
@@ -60,14 +61,14 @@ func (c Order) ProcessOrder(ctx context.Context, req domain.ProcessOrderRequest)
 //	@Tags		order
 //	@Summary	Получить заказы
 //	@Produce	json
-//	@Param		limit		query		int		false	"максимальное количество блюд"
-//	@Param		offset		query		int		false	"смещение"
-//	@Param		X-USER-ID	header		string	true	"id пользователя"
-//	@Success	200			{object}	domain.UserOrder
-//	@Failure	400			{object}	apierrors.Error
-//	@Failure	403			{object}	apierrors.Error
-//	@Failure	404			{object}	apierrors.Error
-//	@Failure	500			{object}	apierrors.Error
+//	@Param		limit	query	int	false	"максимальное количество блюд"
+//	@Param		offset	query	int	false	"смещение"
+//	@Security	Bearer
+//	@Success	200	{object}	domain.UserOrder
+//	@Failure	400	{object}	apierrors.Error
+//	@Failure	403	{object}	apierrors.Error
+//	@Failure	404	{object}	apierrors.Error
+//	@Failure	500	{object}	apierrors.Error
 //	@Router		/orders/my [GET]
 func (c Order) GetUserOrders(ctx context.Context,
 	req domain.GetMyOrdersRequest,
