# backend/routes/middlewares.go
@@ -3,55 +3,57 @@ package routes
 import (
 	"context"
 	"dish_as_a_service/domain"
+	"dish_as_a_service/helpers"
+	"dish_as_a_service/jwt"
 	"fmt"
 	"net/http"
+	"slices"
 
 	http2 "github.com/Falokut/go-kit/http"
 	"github.com/Falokut/go-kit/http/apierrors"
 )
 
-const (
-	userIdHeader = "X-User-Id"
-)
-
-type UserAuthRepo interface {
-	IsAdmin(ctx context.Context, id string) (bool, error)
+type AuthMiddleware struct {
+	accessTokenSecret string
 }
 
-type UserAuth struct {
-	repo UserAuthRepo
-}
-
-func NewAuthMiddleware(repo UserAuthRepo) UserAuth {
-	return UserAuth{repo: repo}
-}
-
-func (m UserAuth) UserAdminAuth(next http2.HandlerFunc) http2.HandlerFunc {
-	return func(ctx context.Context, w http.ResponseWriter, r *http.Request) error {
-		userId := r.Header.Get(userIdHeader)
-		if userId == "" {
-			return apierrors.New(http.StatusUnauthorized, domain.ErrCodeEmptyUserIdHeader,
-				fmt.Sprintf("заголовок %s не предоставлен", userIdHeader), domain.ErrUnauthorized)
-		}
-		isAdmin, err := m.repo.IsAdmin(r.Context(), userId)
-		if err != nil {
-			return err
-		}
-		if !isAdmin {
-			return apierrors.New(http.StatusForbidden, domain.ErrCodeUserNotAdmin,
-				domain.ErrUserOperationForbidden.Error(), domain.ErrUserOperationForbidden)
-		}
-		return next(ctx, w, r)
+func NewAuthMiddleware(accessTokenSecret string) AuthMiddleware {
+	return AuthMiddleware{
+		accessTokenSecret: accessTokenSecret,
 	}
 }
 
-func (m UserAuth) UserAuth(next http2.HandlerFunc) http2.HandlerFunc {
-	return func(ctx context.Context, w http.ResponseWriter, r *http.Request) error {
-		userId := r.Header.Get(userIdHeader)
-		if userId == "" {
-			return apierrors.New(http.StatusUnauthorized, domain.ErrCodeEmptyUserIdHeader,
-				fmt.Sprintf("заголовок %s не предоставлен", userIdHeader), domain.ErrUnauthorized)
+func (m AuthMiddleware) AdminAuthToken() http2.Middleware {
+	return AuthToken(m.accessTokenSecret, domain.AdminType)
+}
+
+func (m AuthMiddleware) UserAuthToken() http2.Middleware {
+	return AuthToken(m.accessTokenSecret, domain.UserType, domain.AdminType)
+}
+
+func AuthToken(tokenSecret string, roles ...string) http2.Middleware {
+	return func(next http2.HandlerFunc) http2.HandlerFunc {
+		return func(ctx context.Context, w http.ResponseWriter, r *http.Request) error {
+			token, err := helpers.GetBearerToken(r)
+			if err != nil {
+				return err
+			}
+			userInfo, err := jwt.ParseToken(token, tokenSecret)
+			if err != nil {
+				return err
+			}
+			r.Header.Add(domain.UserIdHeader, fmt.Sprint(userInfo.UserId))
+			if len(roles) == 0 {
+				return next(ctx, w, r)
+			}
+			if !slices.Contains(roles, userInfo.RoleName) {
+				return apierrors.New(http.StatusForbidden,
+					domain.ErrCodeForbidden,
+					"доступ запрещён",
+					domain.ErrForbidden, // nolint:err113
+				)
+			}
+			return next(ctx, w, r)
 		}
-		return next(ctx, w, r)
 	}
 }
